Fix alignment issues on outcome and preview tabs

--- a/app/assets/stylesheets/base/margins_and_paddings.scss
+++ b/app/assets/stylesheets/base/margins_and_paddings.scss
@@ -131,3 +131,7 @@
 .align-items-flex-end {
   align-items: flex-end;
 }
+
+.align-self-flex-end {
+  align-self: flex-end;
+}
